# WebScrapingTool

./: .dockerignore  .env.example  .gitignore  .replit  ARCHITECTURE.md  Dockerfile  README.md  UI_REDESIGN.md  app.py  database.py  main.py  pyproject.toml  replit.md  requirements.txt  scheduler.py  scraping_history.db
.streamlit/: config.toml
docs/: QUICKSTART copy.md  UPDATES_COMPLETE.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/batch/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/scraper/: page.tsx
frontend/app/session/[id]/: page.tsx
frontend/lib/: api.ts
templates/: base.html  batch.html  dashboard.html  history.html  landing.html  scraper.html
templates/auth/: login.html
