[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "trafilatura>=2.0.0",
]
