[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "sqlalchemy>=2.0.43",
    "streamlit-extras>=0.7.8",
    "streamlit>=1.49.1",
    "trafilatura>=2.0.0",
    "streamlit-lottie>=0.0.5",
    "pdfplumber>=0.11.7",
    "lxml>=5.4.0",
    "httpx>=0.28.1",
    "urllib3>=2.5.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "python-magic>=0.4.27",
    "jinja2>=3.1.6",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
]
